add papers to reacnetgenerator list
Signed-off-by: Jinzhe Zeng <jinzhe.zeng@rutgers.edu>

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -740,3 +740,281 @@ pages={4304--4317},
     doi =      {10.1063/5.0155600},
 
 }
+
+@article{Liu_Gaodengxuexiaohuaxuexuebao_2022_v43_p20210834,
+author = {[刘嘉欣, 闵杰, 许华杰, 任海生, 谈宁馨]},
+title = {基于反应力场分子模拟的乙烯燃烧自由基与氮气相互作用研究},
+publisher = {高等学校化学学报},
+year = {2022},
+journal = {高等学校化学学报},
+volume = {43},
+number = {4},
+eid = {20210834},
+pages = {20210834-},
+keywords = {;乙烯燃烧;瞬发型一氧化氮;反应力场分子动力学},
+doi = http://www.cjcu.jlu.edu.cn/CN/10.7503/cjcu20210834
+}
+
+@Article{She_Molecules_2022_v27_p8255,
+    author =   {Chongchong She and Kun Chen and Minglei Chen and Zhiyan Lu and Nana Wu
+             and Lijie Li and Junfeng Wang and Shaohua Jin},
+    title =    {{Coupling Effect of Non-Ignition Impact and Heat on the Decay of FOX-7}},
+    journal =  {Molecules},
+    year =     2022,
+    volume =   27,
+    issue =    23,
+    pages =    8255,
+    annote =   {Non-ignition impact and heat stimuli are the most common external
+             stimuli loaded on energetic materials. Nevertheless, there is thereby
+             an urgent need, but it is still a significant challenge to comprehend
+             their coupling effects on the decay and safety mechanisms of energetic
+             materials. Then, reactive molecular dynamics simulation was employed
+             to mimic practical situations and reveal the impact heat coupling
+             effect on the decay mechanism of FOX-7. The temperature and the degree
+             of compression of the crystal caused by the impact are considered
+             variables in the simulation. Both increasing the degree of compression
+             and elevating the temperature promotes the decay of FOX-7. However,
+             their underlying response mechanism is not the same. The acceleration
+             of decomposition is due to the elevated potential energy of the FOX-7
+             molecules because of elevating the temperature. In addition to the
+             elevated potential energy of the molecule, the main contribution to
+             the decomposition from the compression is to change the decomposition
+             path. The results of the analysis show that compression reduces the
+             stability of the C=C bond, so that chemical reactions related to the
+             double bond occur. In addition, interestingly, the compression along
+             the c direction has an almost equal effect on the final product as the
+             compression along the b direction. Finally, the decay reaction
+             networks are proposed to provide insights into the decomposition
+             mechanism on atomic level. All these findings are expected to pave a
+             way to understand the underlying response mechanism for the FOX-7
+             against external stimuli.},
+    PMCID =    {PMC9737319},
+    doi =      {10.3390/molecules27238255},
+}
+
+
+@Article{Zhu_Processes_2022_v10_p2378,
+    author =   {Qiren Zhu and Fang Wang and Jie-Yao Lyu and Yang Li and Dongping Chen
+             and Wenming Yang},
+    title =    {{Molecular Dynamics Simulation on the Pyrolysis Process of PODE3-5}},
+    journal =  {Processes},
+    year =     2022,
+    volume =   10,
+    issue =    11,
+    pages =    2378,
+    annote =   {<jats:p>This paper investigates the pyrolysis of PODEn (n = 3, 4, 5)
+             using ReaxFF molecular dynamics simulation. A large-scale model, which
+             contains 2000 PODEn molecules, is simulated at 3000 K. The higher
+             frequencies of the initial PODEn decomposition reaction at
+             {\ensuremath{\alpha}} or {\ensuremath{\beta}} C-O bond show that the
+             {\ensuremath{\alpha}} or {\ensuremath{\beta}} C-O bond in PODEn is not
+             easy to break, which is approximately half the number of the other
+             type of C-O bond dissociation. Furthermore, the bond dissociation
+             energies (BDEs) are calculated using the ReaxFF method. The BDE of
+             {\ensuremath{\alpha}} or {\ensuremath{\beta}} C-O bond is higher than
+             that of the other C-O bond, ~3{\textendash}11 kcal/mol, indicating
+             that BDE is one of the factors causing the different proportions of
+             bonds broken. The evolution of pyrolysis products is also
+             investigated. The results reveal that long-chain pyrolysis products
+             from the initial PODEn decomposition are prone to further reaction,
+             while a large amount of CH3O and CH3 remains in the system. This helps
+             explain the difficulty in {\ensuremath{\alpha}} and
+             {\ensuremath{\beta}} C-O bond dissociation reactions. The results of
+             the pyrolysis products are consistent with the result in further
+             chemical kinetic simulation. The C2 species in pyrolysis products is
+             relatively low, especially for C2H4 and C2H3, which is around zero.
+             This supports the ability of PODEn to reduce soot emission.</jats:p>},
+    doi =      {10.3390/pr10112378},
+}
+
+
+@Article{Chu_PhysChemChemPhys_2022_v24_p25885,
+    author =   {Qingzhao Chu and Xiaoya Chang and Kang Ma and Xiaolong Fu and Dongping
+             Chen},
+    title =    {{Revealing the thermal decomposition mechanism of RDX crystals by a
+             neural network potential}},
+    journal =  {Phys. Chem. Chem. Phys.},
+    year =     2022,
+    volume =   24,
+    issue =    42,
+    pages =    {25885--25894},
+    annote =   {A neural network potential (NNP) is developed to investigate the
+             complex reaction dynamics of 1,3,5-trinitro-1,3,5-triazine (RDX)
+             thermal decomposition. Our NNP model is proven to possess good
+             computational efficiency and retain the ab initio accuracy, which
+             allows the investigation of the entire decomposition process of bulk
+             RDX crystals from an atomic perspective. A series of molecular
+             dynamics (MD) simulations are performed on the NNP to calculate the
+             physical and chemical properties of the RDX crystal. The results show
+             that the NNP can accurately describe the physical properties of RDX
+             crystals, such as the cell parameters and the equation of state. The
+             simulations of RDX thermal decomposition reveal that the NNP could
+             capture the evolution of species at ab initio accuracy. The complex
+             reaction network was established, and a reaction mechanism of RDX
+             decomposition was provided. The N-N homolysis is the dominant channel,
+             which cannot be observed in previous DFT studies of isolated RDX
+             molecule. In addition, the H abstraction reaction by NO2 is found to
+             be the critical pathway for NO and H2O formation, while the HONO
+             elimination is relatively weak. The NNP gives an atomic insight into
+             the complex reaction dynamics of RDX and can be extended to
+             investigate the reaction mechanism of novel energetic materials.},
+    doi =      {10.1039/d2cp03511a},
+}
+
+
+@Article{Sun_JMolModel_2023_v29_p292,
+    author =   {Zi-Jian Sun and Hui Li and Weihua Zhu},
+    title =    {{Reactive molecular dynamics simulations on the decomposition process
+             of 1,3,5-trinitro-1,3,5-triazine crystal under high temperatures and
+             pressure}},
+    journal =  {J. Mol. Model.},
+    year =     2023,
+    volume =   29,
+    issue =    9,
+    pages =    292,
+    annote =   {Reactive molecular dynamics simulations were performed to study the
+             decomposition processes of 1,3,5-trinitro-1,3,5-triazine (RDX) crystal
+             under high temperatures (2100, 2400, 2700, and 3000 K) and detonation
+             pressure (34.5 GPa) and 0 GPa. It is found that the initial
+             decomposition paths of RDX under different temperatures coupled with
+             detonation pressure are similar, which is due to the N-NO2 bond
+             breakage to release NO2. The formation rates of N2 and H2O are
+             significantly affected by temperature, while those of CO2 are less
+             influenced. The C atoms finally formed C clusters. As the temperature
+             rises, the decomposition speeds up, indicating that the high
+             temperature accelerates the decomposition. Applying pressure can
+             reduce the reaction energy barrier and accelerate the decomposition.},
+    doi =      {10.1007/s00894-023-05656-8},
+}
+
+
+@Article{Yu_ChemicalPhysics_2023_v573_p112008,
+    author =   {Yin Yu and Liang Song and Jun Jiang and Feng-Qi Zhao and Si-Yu Xu and
+             Xue-Hai Ju},
+    title =    {{Reactive molecular dynamics simulations of multicomponent models for
+             RP-3 jet fuel in combustion at supercritical conditions: A
+             comprehensive mechanism study}},
+    journal =  {Chemical Physics},
+    year =     2023,
+    volume =   573,
+    pages =    112008,
+    doi =      {10.1016/j.chemphys.2023.112008},
+}
+
+
+@Article{Lyu_CombustionandFlame_2023_v255_p112877,
+    author =   {Jie-Yao Lyu and Qiren Zhu and Xin Bai and Xuan Ren and Jing Li and
+             Dongping Chen and Vitaly G. Kiselev and Yang Li and Wenming Yang},
+    title =    {{A detailed chemical kinetic mechanism of
+             1,1-diamino-2,2-dinitroethylene (FOX-7) initial decomposition in the
+             gas phase}},
+    journal =  {Combustion and Flame},
+    year =     2023,
+    volume =   255,
+    pages =    112877,
+    doi =      {10.1016/j.combustflame.2023.112877},
+}
+
+
+@Article{Chen_Energy_2023_v278_p127900,
+    author =   {Jingwei Chen and Chenxi Wang and Wenxue Shang and Yu Bai and Xiaomin
+             Wu},
+    title =    {{Study on the mechanisms of hydrogen production from alkali lignin
+             gasification in supercritical water by ReaxFF molecular dynamics
+             simulation}},
+    journal =  {Energy},
+    year =     2023,
+    volume =   278,
+    pages =    127900,
+    doi =      {10.1016/j.energy.2023.127900},
+}
+
+
+@Article{Xing_Fuel_2023_v346_p128357,
+    author =   {Zhihao Xing and Mengwei Yu and Cheng Chen and Xi Jiang},
+    title =    {{A molecular investigation on the effects of OMEX addition on soot
+             inception of diesel pyrolysis}},
+    journal =  {Fuel},
+    year =     2023,
+    volume =   346,
+    pages =    128357,
+    doi =      {10.1016/j.fuel.2023.128357},
+}
+
+
+@Article{Xing_EnergyConversionandManagement_2023_v289_p117164,
+    author =   {Zhihao Xing and Cheng Chen and Xi Jiang},
+    title =    {{A molecular investigation on the mechanism of co-pyrolysis of ammonia
+             and biodiesel surrogates}},
+    journal =  {Energy Conversion and Management},
+    year =     2023,
+    volume =   289,
+    pages =    117164,
+    doi =      {10.1016/j.enconman.2023.117164},
+}
+
+
+@Article{Chu_JPhysChemC_2023_v127_p12976,
+    author =   {Qingzhao Chu and Mingjie Wen and Xiaolong Fu and Abbas Eslami and
+             Dongping Chen},
+    title =    {{Reaction Network of Ammonium Perchlorate (AP) Decomposition: The
+             Missing Piece from Atomic Simulations}},
+    journal =  {J. Phys. Chem. C},
+    year =     2023,
+    volume =   127,
+    issue =    27,
+    pages =    {12976--12982},
+    doi =      {10.1021/acs.jpcc.3c01666},
+}
+
+
+@Article{Zhang_Fuel_2023_v338_p127264,
+    author =   {Xin Zhang and Yiming Zhao and Wenjuan Li and Yun Zhang and Siyu Xu and
+             Sen Xu and Wen Zhou and Yizheng Fu and Yongan Feng and Weiguo Cao},
+    title =    {{Combustion characteristics of three linear monohydric alcohols
+             CH3(CH2)n-1OH (n{~}={~}16, 18, 22): Combined ignition experiments and
+             molecular dynamics simulations}},
+    journal =  {Fuel},
+    year =     2023,
+    volume =   338,
+    pages =    127264,
+    doi =      {10.1016/j.fuel.2022.127264},
+}
+
+
+@Article{Xu_PolymerDegradationandStability_2023_v208_p110249,
+    author =   {Zhiheng Xu and Qiyuan Xie and Cheng Chen and Xi Jiang},
+    title =    {{Molecular dynamics simulation of converting waste polyethylene (PE) to
+             chemicals and fuels under non-isothermal and isothermal conditions}},
+    journal =  {Polymer Degradation and Stability},
+    year =     2023,
+    volume =   208,
+    pages =    110249,
+    doi =      {10.1016/j.polymdegradstab.2023.110249},
+}
+
+
+@Article{Liu_InternationalJournalofHydrogenEnergy_2023_v48_p1625,
+    author =   {Xiuting Liu and Min Zhao and Muye Feng and Yuejin Zhu},
+    title =    {{Study on mechanisms of methane/hydrogen blended combustion using
+             reactive molecular dynamics simulation}},
+    journal =  {International Journal of Hydrogen Energy},
+    year =     2023,
+    volume =   48,
+    issue =    4,
+    pages =    {1625--1635},
+    doi =      {10.1016/j.ijhydene.2022.10.050},
+}
+
+
+@Article{Shang_Fuel_2024_v357_p129909,
+    author =   {Zhe Shang and Hui Li},
+    title =    {{Unraveling pyrolysis mechanisms of lignin dimer model compounds:
+             Neural network-based molecular dynamics simulation investigations}},
+    journal =  {Fuel},
+    year =     2024,
+    volume =   357,
+    pages =    129909,
+    doi =      {10.1016/j.fuel.2023.129909},
+}
+
