mark corresponding author

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -1021,7 +1021,7 @@ doi = http://www.cjcu.jlu.edu.cn/CN/10.7503/cjcu20210834
 @Article{Tao_JChemPhys_2024_v160_p224104,
     author =   {Yujun Tao and Timothy J. Giese and {\c{S}}{\"o}len Ekesan and Jinzhe
              Zeng and B{\'a}lint Aradi and Ben Hourahine and Hasan Metin Aktulga
-             and Andreas W. G{\"o}tz and Kenneth M. {Merz Jr} and Darrin M. York},
+             and Andreas W. G{\"o}tz and Kenneth M. {Merz Jr} and Darrin M. York*},
     title =    {{Amber free energy tools: Interoperable software for free energy
              simulations using generalized quantum mechanical/molecular mechanical
              and machine learning potentials}},
