--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -1831,8 +1831,7 @@ doi = http://www.cjcu.jlu.edu.cn/CN/10.7503/cjcu20210834
 @Article{Li_IntJGreenEnergy_2024_v21_p2117,
     author =   {Yunlong Li and Yinan Qiu and Zheng Wang and Wei Chen},
     title =    {{Molecular dynamics simulation of the inhibition effects of inert gases
-             (Ar/He/N             {\ensuremath{<}}sub{\ensuremath{>}}2{\ensuremath{
-             <}}/sub{\ensuremath{>}}             ) on hydrogen oxidation}},
+             (Ar/He/N<sub>2</sub>}             ) on hydrogen oxidation}},
     journal =  {Int. J. Green Energy},
     year =     2024,
     volume =   21,
