--- a/references.bib
+++ b/references.bib
@@ -442,7 +442,7 @@
 @Article{Guo_AcsCatal_2024_v14_p5720,
     author =   {Hui Guo and Hong Zhu and Gao-Yong Liu and Zhao-Xu Chen},
     title =    {{General Reaction Network Exploration Scheme Based on Graph Theory
-             Representation and Depth First Search Applied to CO{\ensuremath{<}}sub
+             Representation and Depth First Search Applied to CO
              <sub>2</sub> Hydrogenation on
              Pd<sub>2</sub>Cu Catalyst}},
     journal =  {Acs Catal.},
