--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -1540,10 +1540,8 @@ doi = http://www.cjcu.jlu.edu.cn/CN/10.7503/cjcu20210834
 @Article{Guo_AcsCatal_2024_v14_p5720,
     author =   {Hui Guo and Hong Zhu and Gao-Yong Liu and Zhao-Xu Chen},
     title =    {{General Reaction Network Exploration Scheme Based on Graph Theory
-             Representation and Depth First Search Applied to CO{\ensuremath{<}}sub
-             {\ensuremath{>}}2{\ensuremath{<}}/sub{\ensuremath{>}} Hydrogenation on
-             Pd{\ensuremath{<}}sub{\ensuremath{>}}2{\ensuremath{<}}/sub{\ensuremath
-             {>}}Cu Catalyst}},
+             Representation and Depth First Search Applied to CO<sub>2</sub> Hydrogenation on
+             Pd<sub>2</sub>Cu Catalyst}},
     journal =  {Acs Catal.},
     year =     2024,
     volume =   14,
